images url changed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="content-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic1.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic1.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Ecclesiastes 3:11</h3>
@@ -42,7 +42,7 @@
                 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic5.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic5.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>1 Peter 3:3-4</h3>
@@ -52,7 +52,7 @@
                 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic2.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic2.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Psalm 27:4</h3>
@@ -70,7 +70,7 @@
             <div class="content-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic4.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic4.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Psalm 144:15</h3>
@@ -80,7 +80,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic6.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic6.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Philippians 4:4</h3>
@@ -90,7 +90,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic3.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic3.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Proverbs 17:22</h3>
@@ -107,7 +107,7 @@
             <div class="content-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic8.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic8.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Isaiah 53:5</h3>
@@ -117,7 +117,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic7.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic7.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Psalm 147:3</h3>
@@ -127,7 +127,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic9.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic9.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Jeremiah 17:14</h3>
@@ -144,7 +144,7 @@
             <div class="content-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic10.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic10.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>1 Corinthians 13:4-7</h3>
@@ -154,7 +154,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic17.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic17.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>1 John 4:19</h3>
@@ -164,7 +164,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic12.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic12.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Romans 8:38-39</h3>
@@ -181,7 +181,7 @@
             <div class="content-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic15.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic15.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Philippians 4:13</h3>
@@ -191,7 +191,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic13.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic13.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Isaiah 40:31</h3>
@@ -201,7 +201,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="/images/pic16.jpeg" alt="Mountain Landscape">
+                        <img src="./images/pic16.jpeg" alt="Mountain Landscape">
                     </div>
                     <div class="card-content">
                         <h3>Joshua 1:9</h3>
