updated spotify links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>The Beauty of God</h2>
             </div>
             <div class="content-grid">
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DXdgnLr18vPvu" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/4EVC7OZPtsPJAnCy87bW2a?si=8218b92552d64382" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic1.jpeg" alt="Ecclesiastes 3:11">
@@ -39,13 +39,13 @@
                             <h3>Ecclesiastes 3:11</h3>
                             <p>He has made everything beautiful in its time. He has also set eternity in the human heart; yet no one can fathom what God has done from beginning to end</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Worship & Praise
+                                <i class="fab fa-spotify"></i> Oa Ntwanela
                             </div>
                         </div>
                     </div>
                 </a>
                 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DX0BxHamLZgav" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/05pQwGDrM4IhnOy7wfRGCb?si=51e8934a5aed4c00" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic5.jpeg" alt="1 Peter 3:3-4">
@@ -54,13 +54,13 @@
                             <h3>1 Peter 3:3-4</h3>
                             <p>Your beauty should not come from outward adornment... Rather, it should be that of your inner self, the unfading beauty of a gentle and quiet spirit, which is of great worth in God's sight.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Quiet Time
+                                <i class="fab fa-spotify"></i> Make A Way
                             </div>
                         </div>
                     </div>
                 </a>
                 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DXdxcBWuJkbcy" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/2JffucuR5jZhDf9ysy0EnA?si=3b29ccf6dec74ce1" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic2.jpeg" alt="Psalm 27:4">
@@ -69,7 +69,7 @@
                             <h3>Psalm 27:4</h3>
                             <p>One thing I ask from the Lord... that I may dwell in the house of the Lord all the days of my life, to gaze on the beauty of the Lord and to seek him in his temple.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> In His Presence
+                                <i class="fab fa-spotify"></i> You Waited 
                             </div>
                         </div>
                     </div>
