spotify links updated

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2>Blessing & Joy</h2>
             </div>
             <div class="content-grid">
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DX0s5kDXi1oC5" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/42Q6AOIHAybfNz8tFMwrWl?si=65a7c5fed9314f48" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic4.jpeg" alt="Psalm 144:15">
@@ -92,13 +92,13 @@
                             <h3>Psalm 144:15</h3>
                             <p>Blessed is the people of whom this is true; blessed is the people whose God is the Lord.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Blessed
+                                <i class="fab fa-spotify"></i> Hold Us Together
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DX3YSRoSdA634" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/7amI71zqlFSwDF3jFjHa2l?si=17b590da41ab4061" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic6.jpeg" alt="Philippians 4:4">
@@ -107,13 +107,13 @@
                             <h3>Philippians 4:4</h3>
                             <p>Rejoice in the Lord always. I will say it again: Rejoice!</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Rejoice
+                                <i class="fab fa-spotify"></i> Intentional
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DXcFk5r8uS3l2" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/0Dlm41iXvTsIVsEOce3yX6?si=99bda6b527e94b8a" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic3.jpeg" alt="Proverbs 17:22">
@@ -122,7 +122,7 @@
                             <h3>Proverbs 17:22</h3>
                             <p>A cheerful heart is good medicine, but a crushed spirit dries up the bones.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Cheerful Heart
+                                <i class="fab fa-spotify"></i>You Know My Name
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                 <h2>Healing & Redemption</h2>
             </div>
             <div class="content-grid">
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DXdgnLr18vPvu" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/18FPbHjbvv4BOUSajGHirW?si=a23a3603690042c8" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic8.jpeg" alt="Isaiah 53:5">
@@ -145,13 +145,13 @@
                             <h3>Isaiah 53:5</h3>
                             <p>He was pierced for our transgressions, he was crushed for our iniquities; the punishment that brought us peace was on him, and by his wounds we are healed.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> By His Wounds
+                                <i class="fab fa-spotify"></i> Breathe Upon Me
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DXdgnLr18vPvu" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/3BPPakEzZWw0pQQzuQfvBt?si=6fa60393735b436d" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic7.jpeg" alt="Psalm 147:3">
@@ -160,13 +160,13 @@
                             <h3>Psalm 147:3</h3>
                             <p>He heals the brokenhearted and binds up their wounds.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Healer
+                                <i class="fab fa-spotify"></i> See What The Lord Has Done
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DXdgnLr18vPvu" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/30JZSv9EEYzxHXIQFfO1dB?si=46d2a84922f44533" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic9.jpeg" alt="Jeremiah 17:14">
@@ -175,7 +175,7 @@
                             <h3>Jeremiah 17:14</h3>
                             <p>Heal me, Lord, and I will be healed; save me and I will be saved, for you are the one I praise.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Heal Me
+                                <i class="fab fa-spotify"></i> Kgosi Ya Rena
                             </div>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                 <h2>God's Love</h2>
             </div>
             <div class="content-grid">
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DX0sa2Fqej3CR" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/4Zn1bgOiW8pCJ5K9tCbIDd?si=c3bd71f326c64c79" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic10.jpeg" alt="1 Corinthians 13:4-7">
@@ -198,13 +198,13 @@
                             <h3>1 Corinthians 13:4-7</h3>
                             <p>Love is patient, love is kind... It always protects, always trusts, always hopes, always perseveres.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Love
+                                <i class="fab fa-spotify"></i> Dikgoro
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DX0sa2Fqej3CR" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/4QgFbwQQ3avZ3NfOKlgvKW?si=67d08183c23a483b" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic17.jpeg" alt="1 John 4:19">
@@ -213,13 +213,13 @@
                             <h3>1 John 4:19</h3>
                             <p>We love because he first loved us.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> First Loved
+                                <i class="fab fa-spotify"></i> Kganya
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DX0sa2Fqej3CR" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/0qfJbFQCwOHCkKtvlv1jId?si=6e1e888d93234bdc" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic12.jpeg" alt="Romans 8:38-39">
@@ -228,7 +228,7 @@
                             <h3>Romans 8:38-39</h3>
                             <p>For I am convinced that neither death nor life... nor anything else in all creation, will be able to separate us from the love of God that is in Christ Jesus our Lord.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Unconditional
+                                <i class="fab fa-spotify"></i> Pela Hao
                             </div>
                         </div>
                     </div>
