spotify links updated and completed

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <h2>Strength & Courage</h2>
             </div>
             <div class="content-grid">
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DWY8U6Zq7nvbE" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/59uuKDpLFhHtCWwMudospF?si=e57dfff60c534dd3" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic15.jpeg" alt="Philippians 4:13">
@@ -251,13 +251,13 @@
                             <h3>Philippians 4:13</h3>
                             <p>I can do all this through him who gives me strength.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Strength
+                                <i class="fab fa-spotify"></i> Goodness Of God
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DWY8U6Zq7nvbE" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/7ILH9xthuxo4i4bTXpwDcZ?si=104a181ffb7642f8" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic13.jpeg" alt="Isaiah 40:31">
@@ -266,13 +266,13 @@
                             <h3>Isaiah 40:31</h3>
                             <p>But those who hope in the Lord will renew their strength. They will soar on wings like eagles; they will run and not grow weary, they will walk and not be faint.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Soar
+                                <i class="fab fa-spotify"></i> Gracefully Broken
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="https://open.spotify.com/playlist/37i9dQZF1DWY8U6Zq7nvbE" target="_blank" rel="noopener noreferrer" class="card-link">
+                <a href="https://open.spotify.com/track/2cCkMRJtVF9jviVTnYWQF5?si=9e6eabe7c4de409a" target="_blank" rel="noopener noreferrer" class="card-link">
                     <div class="card">
                         <div class="card-image">
                             <img src="./images/pic16.jpeg" alt="Joshua 1:9">
@@ -281,7 +281,7 @@
                             <h3>Joshua 1:9</h3>
                             <p>Have I not commanded you? Be strong and courageous... for the Lord your God goes with you; he will never leave you nor forsake you.</p>
                             <div class="spotify-badge">
-                                <i class="fab fa-spotify"></i> Courage
+                                <i class="fab fa-spotify"></i> Jesso Mmoloki
                             </div>
                         </div>
                     </div>
